# eve-esi-client

./: .gitattributes  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  publish-on-merge.yml  release.yml  spec-check.yml
build_support/: normalize.rs
examples/: spot_check.rs  sso_login.rs
spec/: README.md  esi-latest.json
src/: auth.rs  cache.rs  hooks.rs  lib.rs  limiter.rs
tests/: backoff.rs  golden_codegen.rs  http_cache.rs
tests/golden/: esi-spec-2026-06-09.json
xtask/: Cargo.toml
xtask/src/: main.rs
