[workspace]
resolver = "2"
members = [".", "xtask"]

[package]
name = "eve-esi-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Complete, spec-generated Rust client for EVE Online's ESI API, with SSO, error-limit backoff, and cache handling built in"
license = "MIT OR Apache-2.0"
repository = "https://github.com/infktd/eve-esi-client"
keywords = ["eve-online", "esi", "api-client", "eve"]
categories = ["api-bindings", "web-programming::http-client"]
include = [
    "src/**",
    "build.rs",
    "build_support/**",
    "spec/esi-latest.json",
    "spec/README.md",
    "examples/**",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
base64 = "0.22"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
http = "1"
oauth2 = { version = "5", default-features = false }
percent-encoding = "2.0"
progenitor-client = "0.14"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["sync", "time"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
httpmock = "0.8"
openapiv3 = "2.2"
progenitor = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
openapiv3 = "2.2"
prettyplease = "0.2"
progenitor = "0.14"
serde_json = "1.0"
syn = "2.0"
